Initial commit of Godot 4

--- a/addons/arcweave/plugin.cfg
+++ b/addons/arcweave/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
-name="Arcweave"
-description="Import your Arcweave project in Godot Engine"
-author="Arcweave"
-version=""
+name="Arcweave Godot Plugin"
+description="Arcweave Godot Plugin is a plugin for importing Arcweave Projects from arcweave.com in Godot and using them in your Projects."
+author="arcweave"
+version="2"
 script="arcweave.gd"
